<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@color/rev_bg_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Revenda"
        android:textSize="32sp"
        android:textColor="@color/rev_title"
        android:fontFamily="@font/leaguespartan"
        android:layout_marginBottom="24dp"/>


    <EditText
        android:id="@+id/inputEmail"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/rev_outline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/inputSenha"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:backgroundTint="@color/rev_outline"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/btnLogin"
        android:text="@string/entrar"
        android:textColor="@color/white"
        android:background="@color/rev_bg_shape"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/linkCadastro"
        android:text="@string/criar_conta"
        android:textColor="@color/rev_title"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>